--- a/styles/style.css
+++ b/styles/style.css
@@ -1,142 +1,228 @@
+/* COMMON STYLES */
 body {
     font-family: 'Montserrat', sans-serif;
-}
-
-.header {
-    max-width: 1820px;
-    margin: 0 auto;
-    display: flex;
-    justify-content: space-between;
-    padding: 49px 10px 0px;
-}
-
-.header-item {
-    max-width: 810px;
-    display: flex;
-    justify-content: space-between;
-    gap: 240px;
-}
-
-.header-logo {
-    background-image: url(../images/logo.svg);
-    width: 97px;
-    height: 30px;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-.header-nav {
-    display: flex;
-    justify-content: space-between;
-    gap: 54px;
-    padding-left: 0;
-    margin-top: 8px;
-    list-style-type: none;
-}
-
-.header-nav a {
-    text-decoration: none;
-    font-size: 18px;
     color: #2B3541;
 }
 
-.socials {
-    display: flex;
-    justify-content: space-between;
-    gap: 30px;
-    padding-left: 0;
-    list-style-type: none;
-    margin-top: 0px;
-}
-
-.socials-inst {
-    background-image: url(../images/in.svg);
-    width: 30px;
-    height: 30px;
-}
-
-.socials-fb {
-    background-image: url(../images/fb.svg);
-    width: 30px;
-    height: 30px;
-}
-
-.banner {
-    max-width: 1330px;
-    height: 852px;
-    margin: 0 205px 142px 390px;
-}
-
-.banner-content {
-    color: #2B3541;
-    background-image: url(../images/girl.png);
-    background-repeat: no-repeat;
-    height: 852px;
-    background-size: auto;
-    background-position-x: 329px;
-    background-position-y: -20px;
-}
-
-.banner-title {
-    position: relative;
+h1 {
+    font-weight: 700;
     font-size: 48px;
-    font-weight: 700;
-    text-transform: uppercase;
-    max-width: 676px;
-    top: 213px;
-    letter-spacing: 0.03em;
+    line-height: 125%;
+    margin: 0;
 }
-
-.banner-subtitle {
+h2 {
     font-size: 40px;
-    top: 229px;
-    position: relative;
-    max-width: 427px;
     font-weight: 400;
-    letter-spacing: 0.7px;
+    line-height: 125%;
+    margin: 0;
 }
-
-.banner-text {
-    font-size: 18px;
-    position: relative;
-    top: 221px;
-    max-width: 330px;
-    margin-left: 92px;
-    line-height: 24px;
-}
-
-.banner-link {
-    position: relative;
-    padding: 22px 30px;
+h3 {
     font-weight: 700;
-    font-size: 16px;
-    text-align: center;
-    letter-spacing: 0.03em;
-    text-transform: uppercase; 
-    text-decoration: none;
-    color: #2B3541;
-    background-color: #FBF138;
-    top: 251px;
-    margin-left: 91px;
+    font-size: 40px;
+    line-height: 125%;
+    margin: 0;
 }
 
-.banner-arrow {
-    position: relative;
-    background-image: url(../images/arrow.svg);
-    width: 52px;
-    height: 55px;
-    border: none;
-    background-color: floralwhite;
-    top: 485px;
-    right: 256px;
+h4 {
+    font-size: 28px;
+    font-weight: 700;
+}
+
+p {
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 150%;
+}
+a {
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 150%;
+    color: #2B3541;
 }
 
 .container {
     max-width: 1143px;
-    margin: 0 357px 0 401px;    
-    padding-left: 10px;
-    padding-right: 10px;
+    margin: 0 auto;
+    padding-left: 15px;
+    padding-right: 15px;
 }
+
+/* HEADER */
+.header {
+    padding-top: 35px;
+    padding-bottom: 16px;
+}
+
+.header-item {
+    display: flex;
+    align-items: center;
+}
+
+.header-item nav {
+    flex-basis: 92%;
+}
+
+.header-logo {
+    flex-basis: 20.1%;
+}
+
+.logo-image {
+    display: block;
+    background-image: url(../images/logo.svg);
+    background-repeat: no-repeat;
+    width: 97px;
+    height: 30px;
+}
+/*
+.logo-image:hover {
+    transform: scale(1.011);
+}*/
+
+.header-nav {
+    display: flex;
+    list-style-type: none;
+    padding-left: 0;
+    gap: 55px;
+}
+/*
+.header-nav li:hover {
+    transform: scale(1.04);
+}*/
+
+.header-nav a {
+    text-decoration: none;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 150%;
+    color: #2B3541;
+}
+/*
+.header-nav a:hover {
+    border-bottom: 1px solid #2B3541;
+    padding-bottom: 12px;
+}*/
+
+.socials {
+    display: flex;
+    gap: 30px;
+}
+
+.socials-inst {
+    display: block;
+    background-image: url(../images/in.svg);
+    background-repeat: no-repeat;
+    width: 30px;
+    height: 30px;
+}
+/*
+.socials-inst:hover {
+    transform: scale(1.2666);
+}*/
+
+.socials-fb {
+    display: block;
+    background-image: url(../images/fb.svg);
+    background-repeat: no-repeat;
+    width: 30px;
+    height: 30px;
+}
+/*
+.socials-fb:hover {
+    transform: scale(1.2666);
+*/
+
+/* BANNER */
+.banner {
+    display: flex;
+    position: relative;
+    margin-bottom: 161px;
+}
+
+.banner-content {
+    padding: 225px 0 0 2px;
+}
+
+.banner-title {
+    max-width: 635px;
+    text-transform: uppercase;
+    letter-spacing: 0.03em;
+}
+
+.banner-subtitle {
+    display: inline-block;
+    text-align: center;
+    margin-top: 41px;
+    text-transform: lowercase;
+    letter-spacing: 0.02em;
+}
+
+.banner-box {
+    max-width: 385px;
+}
+
+.banner-text {
+    margin: 22px 0 55px 90px;
+}
+
+.banner-link {
+    text-transform: uppercase;
+    text-decoration: none;
+    cursor: pointer;
+    padding: 22px 32px;
+    background: #FBF138;
+    box-shadow: 0px 13px 24px rgba(251, 241, 56, 0.3);
+    transition: 0.2s;
+    margin-left: 92px;
+}
+
+/*.banner-link:hover {
+    background-color: #1E2F40;
+    color: #FBF138;
+    transition: 0.2s;*/
+
+.banner-arrow {
+    display: block;
+    background-image: url(../images/arrow.svg);
+    background-repeat: no-repeat;
+    background-color: #fff;
+    border: none;
+    width: 52px;
+    height: 55px;
+    margin-top: 200px;
+    cursor: pointer;
+    outline: none;
+}
+
+.bg {
+    display: flex;
+    max-width: 790px;
+    width: 100%;
+    gap: 20px;
+    position: absolute;
+    top: 0;
+    z-index: -1;
+    right: -75px;
+}
+
+.bg-gradient-left {
+    flex-basis: 70%;
+    height: 850px;
+    background-image: linear-gradient(90deg, #FBF138 0%, rgba(253, 249, 182, 0.45) 145.23%);
+    opacity: 0.2;
+ }
+
+ .bg-gradient-right {
+    flex-basis: 30%;
+    background: linear-gradient(90deg, #FBF138 0%, rgba(253, 249, 182, 0.45) 145.23%);
+    opacity: 0.2;
+ }
+
+ .bg-img {
+    height: 805px;
+    position: absolute;
+    top: 40px;
+    right: -95px;
+ }
 
 .menu-events {
     margin-bottom: 40px;
@@ -145,27 +231,20 @@ body {
     justify-content: space-between;
 }
 
-.menu-events h3 {
-    font-size: 40px;
-    font-weight: 700;
-    color: #2B3541;
-    margin: 0;
-}
-
 .events {
     display: flex;
     justify-content: space-between;
     height: 603px;
     gap: 20px;
-    margin-bottom: 160px;
+    margin-bottom: 158px;
 }
 
 .events-wrap {
-    width: 100%;
-    background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
     position: relative;
+    width: 100%;
 }
 
 .events-wrap_endurance {
@@ -180,33 +259,76 @@ body {
     background-image: url(../images/yoga.jpg);
 }
 
-.events-link-notv {
-    display: none;
+.events-gradient {
+   background: linear-gradient(180deg, rgba(251, 241, 56, .3) 0%, rgba(253, 249, 182, 0) 100%);
+   position: absolute;
+   width: 100%;
+   height: 100%;
+   transition: .2s;
+}
+
+.events-gradient:hover {
+    background: linear-gradient(180deg, rgba(251, 241, 56, .6) 0%, rgba(253, 249, 182, 0) 100%);
 }
 
 .events-date {
-    font-size: 18px;
-    font-weight: 700;
-    margin: 34px 0 28px 30px;
-    color: #2B3541;
+    margin: 34px 0 22px 30px;
 }
 
-.events-wrap h4 {
-    font-size: 28px;
-    font-weight: 700;
-    color: #2B3541;
-    margin: 0 20px 40px 31px;
+.events-gradient h4 {
+    margin: 0 20px 63px 31px;
 }
 
-.events-link {
+.events-link-notv {
+    opacity: 0;
+    font-size: 16px;
+    font-weight: 700;
+    text-decoration: none;
+    color: #FBF138;
+    background-color: #2B3541;
+    box-shadow: 0px 13px 24px rgba(70, 86, 106, 0.28);
+    text-transform: uppercase;
+    padding: 20px 37px;
+    margin-left: 35px;
+}
+
+.events-gradient:hover .events-link-notv {
+    opacity: 1;
+}
+
+.events-button {
+    position: absolute;
     background-color: #FBF138;
     color: #2B3541;
-    text-decoration: none;
-    padding: 14px 21px;
     font-size: 18px;
-    position: absolute;
     bottom: 0;
     right: 0;
+    margin-bottom: 0;
     align-items: center;
+    padding: 11px 21px;
+    text-decoration: none;
+    opacity: 1;
 }
 
+.events-gradient:hover .events-button {
+    opacity: 0;
+}
+
+/* TRAINING */
+.training {
+    margin-bottom: 160px;
+}
+.training-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 38px;
+    gap: 440px;
+}
+
+.training-header-text {
+    margin-top: -13px;
+    font-size: 28px;
+    font-weight: 700;
+    line-height: 125%;
+}
