--- a/styles/style.css
+++ b/styles/style.css
@@ -332,3 +332,130 @@ a {
     font-weight: 700;
     line-height: 125%;
 }
+
+.grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 250px 36px 80px 276px;;
+    gap: 20px;
+}
+
+.grid-item {
+    border: 1px solid rgb(43 52 64 / 50%);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 20px 31px 0;
+}
+
+.grid-item:hover {
+    box-shadow: 0px 4px 30px rgba(43, 53, 65, 0.2);
+    border: none;
+}
+
+.grid-item:nth-child(1) {
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+}
+
+.grid-item:nth-child(2) {
+    grid-column: 2 / 3;
+    grid-row: 1 / 4;
+}
+
+.grid-item:nth-child(3) {
+    grid-column: 3 / 4;
+    grid-row: 1 / 3;
+}
+
+.grid-item:nth-child(4) {
+    grid-column: 1 / 2;
+    grid-row: 2 / 5;
+    border: none;
+    background: linear-gradient(180deg, rgba(251, 241, 56, .7) 0%, rgba(253, 249, 182, 0.45) 100%);
+    box-shadow: 0px 13px 30px rgba(186, 180, 69, 0.2);
+}
+
+.grid-item:nth-child(4) .grid-description {
+    overflow: visible;
+    max-height: 73px;
+}
+
+.grid-item:nth-child(5) {
+    grid-column: 2 / 3;
+    grid-row: 4 / 5;
+}
+
+.grid-item:nth-child(6) {
+    grid-column: 3 / 4;
+    grid-row: 3 / 5;
+}
+
+.grid-data {
+    font-size: 18px;
+    color: #010101;
+    opacity: 0.7;
+    text-align: right;
+    margin: 0;
+}
+
+.grid-title {
+    font-size: 18px;
+    line-height: 125%;
+}
+
+.grid-description {
+    overflow: hidden;
+    max-height: 0;
+    transition: 0.3s linear;
+ }
+
+ .grid-box:hover .grid-description {
+    max-height: 500px;
+ }
+
+ .grid-item:nth-child(1) .grid-title {
+    margin: 34px 0 0 0;
+ }
+
+ .grid-item:nth-child(2) .grid-title {
+    margin: 34px 0 0 0;
+}
+
+.grid-item:nth-child(3) .grid-title {
+    margin: 29px 0 0 5px;
+}
+
+.grid-item:nth-child(5) .grid-title {
+    margin: 34px 0 0 0;
+}
+
+.grid-item:nth-child(6) .grid-title {
+    margin: 34px 0 0 0;
+}
+
+.grid-item:nth-child(1) .grid-description {
+    margin: 0 0 19px 0;
+    padding-top: 4px;
+ }
+
+.grid-item:nth-child(2) .grid-description {
+    margin: 0 0 19px 0;
+    padding-top: 4px;
+}
+
+.grid-item:nth-child(3) .grid-description {
+    margin: 0 0 19px 0;
+    padding-top: 4px;
+}
+
+.grid-item:nth-child(5) .grid-description {
+    margin: 0 0 19px 0;
+    padding-top: 4px;
+}
+
+.grid-item:nth-child(6) .grid-description {
+    margin: 0 0 19px 0;
+    padding-top: 4px;
+}
+
