--- a/styles/style.css
+++ b/styles/style.css
@@ -260,7 +260,7 @@ a {
 }
 
 .events-wrap_yoga {
-    background-image: url(../images/yoga.jpg);
+    background-image: url(../images/yoga1.jpg);
 }
 
 .events-gradient {
@@ -280,7 +280,8 @@ a {
 }
 
 .events-gradient h4 {
-    margin: 0 20px 63px 31px;
+    padding: 0 20px 63px 31px;
+    margin: 0;
 }
 
 .events-link-notv {
@@ -498,7 +499,7 @@ a {
 }
 
 .subscribe-email {
-    padding: 22px 120px 22px 20px;
+    padding: 22px 120px 22px 22px;
     font-size: 18px;
     border: none;
     margin: 0 auto;
@@ -549,7 +550,7 @@ a {
 .subscribe-checkbox:checked + label,
 .subscribe-checkbox:not(:checked) + label{
    position: relative;
-   padding-left: 25px;
+   padding-left: 30px;
    cursor:pointer;
    margin-left: 2px;
 }
@@ -557,27 +558,57 @@ a {
 .subscribe-checkbox:checked + label::before{
     content:'';
     position: absolute;
-    width: 18px;
-    height: 18px;
-    left:0;
+    width: 16px;
+    height: 16px;
+    left: 1px;
     top:calc(50% - 10px);
-    background-image: url("../images/checkbox.svg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
+    background-color: #2B3541;
+    border-radius: 2px;
+    border: 2px solid #2B3541;
  }
 
- .subscribe-checkbox:not(:checked) + label::before{
+ .subscribe-checkbox:checked + label::after{
     content:'';
     position: absolute;
-    width: 18px;
-    height: 18px;
-    left:0;
-    top:calc(50% - 10px);
-    background: #2B3541 url("../images/check_box1.svg");
+    width: 16px;
+    height: 12px;
+    transition: all .2s ease;
+    opacity: 1;
+    left: 4px;
+    top: calc(50% - 6px);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-image: url(../images/check_box1.svg);
+ }
+
+ .subscribe-checkbox:not(:checked) + label::before {
+    content:'';
+    position: absolute;
+    width: 16px;
+    height: 16px;
+    left: 0;
+    top: calc(50% - 10px);
+    background-color: transparent;
+    border-radius: 2px;
+    border: 2px solid #2B3541;
+ }
+
+ .subscribe-checkbox:not(:checked) + label::after{
+    content:'';
+    position: absolute;
+    width: 16px;
+    height: 12px;
+    transition: all .2s ease;
+    opacity: 0;
+    left: 4px;
+    top: calc(50% - 6px);
+    background-position: 0 -12px;
+    background-color: transparent;
     background-repeat: no-repeat;
     background-size: cover;
+    background-image: url(../images/check_box1.svg);
  }
+
 
  .radio:checked + label::before{
     border-radius: 100%;
@@ -633,10 +664,6 @@ a {
     gap: 115px;
     justify-content: space-between;
 }
-
-.company-wrapper-description {
-    max-width: 38vh;
-}
  
 .company-wrapper-title {
     margin-bottom: 20px;
@@ -657,6 +684,7 @@ a {
     margin-top: 34px;
     padding: 20px 55px;
     text-transform: uppercase;
+    cursor: pointer;
 }
 
 .company-wrapper-btn:hover {
@@ -996,9 +1024,8 @@ input:focus {
 }
 
 .close-popup:hover {
-    background-image: url(../images/close-red.svg);
-    width: 24px;
-    height: 24px;
+    width: 21px;
+    height: 21px;
 }
 
 /* MODAL MENU */
@@ -1156,7 +1183,6 @@ input:focus {
     }
 
     .company-box {
-        justify-content: center;
         flex-wrap: wrap;
         gap: 25px 20%;
     }
@@ -1211,13 +1237,13 @@ input:focus {
     .banner-link {
         font-size: 16px;
         text-align: center;
-        padding: 20px 30px;
+        padding: 20px 20px;
         margin: 0;
         max-width: 191px;
     }
 
     .banner-arrow {
-        margin-top: 56px;
+        margin-top: 33px;
     }
 
     .banner-content {
@@ -1229,14 +1255,14 @@ input:focus {
     }
 
     .bg-img {
-        height: 444px;
+        height: 420px;
         right: 35px;
         top: 18px;
     }
 
     .bg-gradient-left {
         flex-basis: 49%;
-        height: 461px;
+        height: 438px;
     }
 
     .menu-events h3 {
@@ -1249,12 +1275,15 @@ input:focus {
         grid-template-areas:
             "a b"
             "c c";
-        grid-template-rows: 48% 48%;
-        height: 115vw;
+        grid-template-rows: 49% 48%;
+        height: 122vw;
+        margin-bottom: 10px;
+        gap: 30px;
     }
 
     .events-wrap_yoga {
         grid-column: 1/3;
+        height: 48vw;
     }
 
     .grid {
@@ -1287,6 +1316,7 @@ input:focus {
 
     .events-gradient h4 {
         max-width: 209px;
+        font-size: 25px;
     }
 
     .events-button {
@@ -1312,10 +1342,6 @@ input:focus {
 
     .subscribe {
         margin-bottom: 100px;
-    }
-
-    .company-wrapper-description {
-        max-width: 30vh;
     }
 
     .company-wrapper {
@@ -1412,7 +1438,7 @@ input:focus {
         max-width: 100%;
         left: -5px;
         gap: 10px;
-        height: 82.4vw;
+        height: 80.4vw;
     }
 
     .bg-gradient-left +
@@ -1423,7 +1449,6 @@ input:focus {
         -o-object-fit: contain;
            object-fit: fill;
         bottom: 0;
-        left: 7px;
     }
 
     .bg-gradient-left {
@@ -1432,7 +1457,7 @@ input:focus {
     }
 
     .bg-gradient-right {
-        flex-basis: 33%;
+        flex-basis: 34%;
     }
 
     .bg-img {
@@ -1492,8 +1517,14 @@ input:focus {
     }
 
     .events {
-        height: 171vw;
+        grid-template-rows: 52% 48%;
         margin-bottom: 90px;
+        gap: 20px;
+        margin-bottom: 90px;
+    }
+
+    .events-wrap_yoga {
+        height: 56vw;
     }
 
     .menu-events h3 {
@@ -1502,6 +1533,10 @@ input:focus {
 
     .events-gradient h4 {
         font-size: 21px;
+    }
+
+    .events-link-notv {
+        padding: 18px 18px;
     }
 
     .company-wrapper-img,
@@ -1557,6 +1592,18 @@ input:focus {
     }
 }
 
+@media (max-width: 690px) {
+    .company-content {
+        align-items: flex-start;
+        text-align: start;
+    }
+
+    .company-wrapper-btn__mob {
+        width: -webkit-fill-available;
+        text-align: center;
+    }
+}
+
 @media (max-width: 600px) {
     .banner {
         margin-bottom: 81px;
@@ -1574,10 +1621,6 @@ input:focus {
         gap: 10px;
     }
 
-    .events-wrap:nth-child(3) {
-        height: 89vw;
-    }
-
     .events-date {
         font-size: 12px;
         margin: 16px 0 15px 16px;
@@ -1586,7 +1629,6 @@ input:focus {
     .events-gradient h4 {
         font-size: 16px;
         max-width: 134px;
-        margin: 0 20px 63px 21px;
     }
     
     .events-link-notv {
@@ -1673,6 +1715,18 @@ input:focus {
     }
 }
 
+@media (max-width: 500px) {
+    .events {
+        height: 171vw;
+        grid-template-rows: 48% 48%;
+        margin-bottom: -60px;
+    }
+
+    .events-wrap__yoga {
+        height: 80vw;
+    }
+}
+
 @media (max-width: 400px) {
     .header {
         padding-top: 31px;
@@ -1704,6 +1758,14 @@ input:focus {
     .banner-text {
         margin-left: 0;
         margin-right: 0;
+    }
+
+    .events {
+        margin-bottom: 90px;
+    }
+
+    .events-wrap:nth-child(3) {
+        height: 89vw;
     }
 
     .subscribe {
@@ -1823,14 +1885,11 @@ input:focus {
         top: -10px;
     }
 
-    .footer-socials-inst {
-        width: 27px;
-        height: 27px;
-    }
-    
+    .footer-socials-inst,
     .footer-socials-fb {
         width: 27px;
         height: 27px;
+        background-size: cover;
     }
 
     .footer-item, .footer-link {
